test/libsolidity/syntaxTests/functionTypes/external_function_type_taking_internal.sol
contract C {
    function(function () internal) external x;
}
// ----
// TypeError: (26-47): Internal type cannot be used for external function type.
